--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,5 @@
 greenrooms (1.0.0) UNRELEASED; urgency=medium
 
-  * Initial staff
+  * Disabled building of unneeded libdeflate shared library
 
  -- Anton Adamansky <adamansky@gmail.com>  Wed, 11 Mar 2020 17:24:44 +0700
