--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,7 @@
 greenrooms (1.0.0) UNRELEASED; urgency=medium
 
+  * Fix: critical bugs in iwnet
+  * Fix: disabled Set-Cookie samesite=node for non secure connections
   * Added Docker image
   * Disabled building of unneeded libdeflate shared library
 
