--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+wirow (1.0.2) UNRELEASED; urgency=medium
+
+  * ice_servers config parameter replaces deprecated turn_servers/stun_server options
+
+ -- Anton Adamansky <adamansky@gmail.com>  Wed, 04 May 2022 21:53:52 +0700
+
 wirow (1.0.1) testing; urgency=medium
 
   * UI: Added room time tracker.
