--- a/Changelog
+++ b/Changelog
@@ -15,7 +15,7 @@ wirow (1.0.1) testing; urgency=medium
   * Impl: Active speaker identification.
   * Fix: iwnet upgraded (critical bugs fixed).
   * Fix: disabled Set-Cookie samesite=node for non secure connections.
-  * Implemented: Added Docker image.
+  * Impl: Added Docker image.
   * Fix: Disabled building of unneeded libdeflate shared library.
 
  -- Anton Adamansky <adamansky@gmail.com>  Wed, 04 May 2022 14:41:15 +0700
