--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,9 @@
-wirow (1.0.2) UNRELEASED; urgency=medium
+wirow (1.0.2) testing; urgency=medium
 
   * Impl: wirow.ini TURN/STUN servers now used by web client.
   * Impl: ice_servers config parameter replaces deprecated turn_servers/stun_server options.
 
- -- Anton Adamansky <adamansky@gmail.com>  Wed, 04 May 2022 21:53:52 +0700
+ -- Anton Adamansky <adamansky@gmail.com>  Thu, 05 May 2022 13:52:32 +0700
 
 wirow (1.0.1) testing; urgency=medium
 
