* Fix: Producers leak on screen sharing.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+wirow (1.0.3) UNRELEASED; urgency=medium
+
+  * Fix: Producers leak on screen sharing.
+
+ -- Anton Adamansky <adamansky@gmail.com>  Wed, 11 May 2022 15:40:43 +0700
+
 wirow (1.0.2) testing; urgency=medium
 
   * Impl: wirow.ini TURN/STUN servers now used by web client.
